crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__arrays__array_declaration_2.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/arrays.rs
assertion_line: 22
expression: "goto_definition(r#\"\n%! main.sp\nint arr[] =\n     |\n     ^\n{\n\t(0 << 1)\n\n};\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 0,
        "character": 4
      },
      "end": {
        "line": 0,
        "character": 7
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 4
      },
      "end": {
        "line": 4,
        "character": 1
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 4
      },
      "end": {
        "line": 0,
        "character": 7
      }
    }
  }
]
